aocd for java - Puzzle and User refactor